RAS-501: Refactor back link

--- a/app/views/global_error.scala.html
+++ b/app/views/global_error.scala.html
@@ -21,6 +21,10 @@
 
 @ras_main(title = Messages("global.error.page.title")) {
 
+  <div>
+   <a href="javascript:history.back()">@Messages("back")</a>
+  </div>
+
   <h1 id="header">@Messages("technical.error")</h1>
 
 }
