--- a/app/views/member_name.scala.html
+++ b/app/views/member_name.scala.html
@@ -24,49 +24,49 @@
 
 @views.html.helpers.errorSummary(memberNameForm)
 
- <div class="grid-row">
+<div class="grid-layout--no-gutter">
+  <div class="grid-layout__column">
+    <div class="grid-layout__column--3-4">
 
-  <div class="column-full">
+        <!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&-->
+        <div class="back-arrow">
+         <a class="link-back" href="javascript:history.back()">@Messages("back")</a>
+        </div>
 
-   <div class="back-arrow">
-    <a class="link-back" href="@routes.SessionController.redirect("start",false)">@Messages("back")</a>
-   </div>
+        <h1 id="header" class="heading-xlarge">@Messages("member.name.page.header")</h1>
 
-   <h1 id="header" class="heading-xlarge">@Messages("member.name.page.header")</h1>
-
-    <p id="sub-header">@Messages("member.name.page.sub-header")</p>
-
-
-     @form(action = routes.MemberNameController.post) {
-
-       <div class="form-group">
-
-         <div>
-          @rasInput(memberNameForm("firstName"),
-          '_label -> Html(Messages("first.name").capitalize),
-           '_labelClass -> "form-label",
-          '_id -> "firstName",
-          '_maxLength -> 35)
-         </div>
-
-         <div>
-          @rasInput(memberNameForm("lastName"),
-          '_label -> Html(Messages("last.name").capitalize),
-           '_labelClass -> "form-label",
-          '_id -> "lastName",
-          '_maxLength -> 35)
-         </div>
-
-       </div>
-
-       <div>
-        <button class="button" type="submit" id="continue">@Messages("continue")</button>
-       </div>
-     }
+         <p id="sub-header">@Messages("member.name.page.sub-header")</p>
 
 
+          @form(action = routes.MemberNameController.post) {
+
+            <div class="form-group">
+
+              <div>
+               @rasInput(memberNameForm("firstName"),
+               '_label -> Html(Messages("first.name").capitalize),
+                '_labelClass -> "form-label",
+               '_id -> "firstName",
+               '_maxLength -> 35)
+              </div>
+
+              <div>
+               @rasInput(memberNameForm("lastName"),
+               '_label -> Html(Messages("last.name").capitalize),
+                '_labelClass -> "form-label",
+               '_id -> "lastName",
+               '_maxLength -> 35)
+              </div>
+
+            </div>
+
+            <div>
+             <button class="button" type="submit" id="continue">@Messages("continue")</button>
+            </div>
+          }
+        <!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&-->
+
+    </div>
   </div>
-
- </div>
-
+</div>
 }
