--- a/app/views/member_nino.scala.html
+++ b/app/views/member_nino.scala.html
@@ -32,8 +32,11 @@
     <a href="javascript:history.back()">@Messages("back")</a>
    </div>
 
-   <h1 id="header" class="heading-xlarge">@Messages("member.nino.page.header", name.capitalize)</h1>
-
+   @if(name == "member"){
+     <h1 id="header" class="heading-xlarge">@Messages("member.nino.page.header", name)</h1>
+   }else{
+     <h1 id="header" class="heading-xlarge">@Messages("member.nino.page.header", name.capitalize)</h1>
+   }
      @form(action = routes.MemberNinoController.post) {
 
        <div class="form-group">
