RAS-501: Add back link styling

--- a/app/views/match_not_found.scala.html
+++ b/app/views/match_not_found.scala.html
@@ -25,9 +25,9 @@
   <div class="grid-layout__column">
     <div class="grid-layout__column--3-4">
 
-    <div>
-      <a href="javascript:history.back()">@Messages("back")</a>
-    </div>
+      <div class="back-arrow">
+        <a class="link-back" href="javascript:history.back()">@Messages("back")</a>
+      </div>
 
       <br>
       <h1 id="match-not-found">@Messages("member.details.not.found",name)</h1>
