--- a/app/views/match_found.scala.html
+++ b/app/views/match_found.scala.html
@@ -31,10 +31,9 @@
   <div class="grid-layout__column">
     <div class="grid-layout__column--3-4">
 
-      <div>
-        <a id="back" href="javascript:history.back()">@Messages("back")</a>
+      <div class="back-arrow">
+        <a class="link-back" href="javascript:history.back()">@Messages("back")</a>
       </div>
-
       <br>
 
       <h1 id="header">@Messages("match.found.header",name)</h1>
