--- a/app/views/member_dob.scala.html
+++ b/app/views/member_dob.scala.html
@@ -28,9 +28,9 @@
   <div class="grid-layout__column">
     <div class="grid-layout__column--3-4">
 
-        <div>
-         <a href="javascript:history.back()">@Messages("back")</a>
-        </div>
+      <div class="back-arrow">
+        <a class="link-back" href="javascript:history.back()">@Messages("back")</a>
+      </div>
 
         <h1 id="header" class="heading-xlarge">@Messages("member.dob.page.header",name.capitalize)</h1>
 
