--- a/app/views/member_nino.scala.html
+++ b/app/views/member_nino.scala.html
@@ -28,8 +28,8 @@
  <div class="grid-layout__column">
   <div class="grid-layout__column--3-4">
 
-   <div>
-    <a href="javascript:history.back()">@Messages("back")</a>
+   <div class="back-arrow">
+    <a class="link-back" href="javascript:history.back()">@Messages("back")</a>
    </div>
 
    @if(name == "member"){
