--- a/app/views/match_found.scala.html
+++ b/app/views/match_found.scala.html
@@ -32,7 +32,7 @@
     <div class="grid-layout__column--3-4">
 
       <div class="back-arrow">
-        <a class="link-back" href="javascript:history.back()">@Messages("back")</a>
+        <a class="link-back" href="@routes.SessionController.back()">@Messages("back")</a>
       </div>
       <br>
 
