RAS-501: add back links routes to views

--- a/app/views/member_dob.scala.html
+++ b/app/views/member_dob.scala.html
@@ -29,7 +29,7 @@
     <div class="grid-layout__column--3-4">
 
       <div class="back-arrow">
-        <a class="link-back" href="javascript:history.back()">@Messages("back")</a>
+        <a class="link-back" href="@routes.MemberDOBController.back">@Messages("back")</a>
       </div>
 
         <h1 id="header" class="heading-xlarge">@Messages("member.dob.page.header",name.capitalize)</h1>
