--- a/app/views/member_nino.scala.html
+++ b/app/views/member_nino.scala.html
@@ -29,7 +29,7 @@
   <div class="grid-layout__column--3-4">
 
    <div class="back-arrow">
-    <a class="link-back" href="javascript:history.back()">@Messages("back")</a>
+    <a class="link-back" href="@routes.MemberNinoController.back">@Messages("back")</a>
    </div>
 
    @if(name == "member"){
