--- a/app/views/match_found.scala.html
+++ b/app/views/match_found.scala.html
@@ -38,7 +38,7 @@
 
       <h1 id="header">@Messages("match.found.header",name)</h1>
 
-      <p id="sub-header">@Messages("match.found.sub-header",name ,currentTaxYear.toString,(currentTaxYear + 1).toString,(currentTaxYear + 2).toString)</p>
+      <p id="sub-header">@Messages("match.found.sub-header",name ,currentYearResidencyStatus ,currentTaxYear.toString,(currentTaxYear + 1).toString,(currentTaxYear + 2).toString, nextYearResidencyStatus)</p>
 
       <table>
         <tbody>
