RAS-501-511: Add full name on pages

--- a/app/views/member_dob.scala.html
+++ b/app/views/member_dob.scala.html
@@ -32,7 +32,7 @@
         <a class="link-back" href="@routes.MemberDOBController.back">@Messages("back")</a>
       </div>
 
-        <h1 id="header" class="heading-xlarge">@Messages("member.dob.page.header",name.capitalize)</h1>
+        <h1 id="header" class="heading-xlarge">@Messages("member.dob.page.header",name)</h1>
 
         @form(action = routes.MemberDOBController.post) {
 
