--- a/app/views/file_upload.scala.html
+++ b/app/views/file_upload.scala.html
@@ -30,6 +30,10 @@
 
         <h1 id="header" class="heading-xlarge">@Messages("file.upload.page.header")</h1>
 
+        <form action="">
+          <input id="choose-file" type="file" name="upload-file">
+          <input class="button" type="submit">
+        </form>
 
 
     </div>
