--- a/app/views/file_upload.scala.html
+++ b/app/views/file_upload.scala.html
@@ -35,10 +35,12 @@
 
       <p id="sub-header">@Html(Messages("file.upload.page.sub-header",Messages("templates.link")))</p>
 
-      <form action="@routes.FileUploadController.post">
-        <input id="choose-file" type="file" name="upload-file">
-        <input class="button" type="submit" value="Upload" id="upload-button">
-      </form>
+      @form(action = routes.FileUploadController.post) {
+        <div class="form-group">
+          <input id="choose-file" type="file" name="upload-file">
+          <input class="button" type="submit" value="Upload" id="upload-button">
+        </div>
+      }
 
     </div>
   </div>
