RAS-551: Added bulk lookup link

--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -24,10 +24,17 @@
 
 <div class="grid-layout--no-gutter">
   <div class="grid-layout__column">
-    <div class="grid-layout__column--3-4">
 
-
+    <div class="grid-layout__column--1-2">
+      <a id="single-lookup-link" href="">@Messages("single.lookup.link")</a>
+      <p id="single-lookup-description">@Messages("single.lookup.description")</p>
     </div>
+
+    <div class="grid-layout__column--1-2">
+      <a id="bulk-lookup-link" href="">@Messages("bulk.lookup.link")</a>
+      <p id="bulk-lookup-description">@Messages("bulk.lookup.description")</p>
+    </div>
+
   </div>
 </div>
 }
