RAS-551: Added recent bulk uploads header

--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -47,7 +47,7 @@
 
 @insideHeader = {
     @uiLayouts.header_nav(
-      navTitle = Some(""),
+      navTitle = Some("Look up if a scheme member pays tax in Scotland"),
       navTitleLink = None,
       showBetaLink = false,
       navLinks = Some(headerNavLinks))
