--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -22,19 +22,27 @@
 
 @ras_main(title = Messages("dashboard.page.title")) {
 
-<div class="grid-layout--no-gutter">
-  <div class="grid-layout__column">
+  <div class="grid-layout--no-gutter">
+    <div class="grid-layout__column">
 
-    <div class="grid-layout__column--1-2">
-      <a id="single-lookup-link" href="">@Messages("single.lookup.link")</a>
-      <p id="single-lookup-description">@Messages("single.lookup.description")</p>
+      <h1 id="header">@Messages("dashboard.page.header")</h1>
+
+      <div class="grid-layout__column--1-2">
+        <a id="single-lookup-link" class="large-underlined-link" href="@routes.MemberNameController.get">@Messages("single.lookup.link")</a>
+        <p id="single-lookup-description">@Messages("single.lookup.description")</p>
+      </div>
+
+      <div class="grid-layout__column--1-2">
+        <a id="bulk-lookup-link" class="large-underlined-link" href="">@Messages("bulk.lookup.link")</a>
+        <p id="bulk-lookup-description">@Messages("bulk.lookup.description")</p>
+      </div>
+
+      <div class="grid-layout__column">
+        <h2 id="recent-lookups">@Messages("recent.lookups")</h2>
+        <p id="recent-lookups-description">@Messages("recent.lookups.description")</p>
+      </div>
+
     </div>
-
-    <div class="grid-layout__column--1-2">
-      <a id="bulk-lookup-link" href="">@Messages("bulk.lookup.link")</a>
-      <p id="bulk-lookup-description">@Messages("bulk.lookup.description")</p>
-    </div>
-
   </div>
-</div>
+
 }
