RAS-432-551: Link bulk on dashboard to file upoad page

--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="grid-layout__column--1-2">
-        <a id="bulk-lookup-link" class="large-underlined-link" href="">@Messages("bulk.lookup.link")</a>
+        <a id="bulk-lookup-link" class="large-underlined-link" href="@routes.FileUploadController.get">@Messages("bulk.lookup.link")</a>
         <p id="bulk-lookup-description">@Messages("bulk.lookup.description")</p>
       </div>
 
