RAS-432-551: Update back links

--- a/app/views/file_upload.scala.html
+++ b/app/views/file_upload.scala.html
@@ -28,7 +28,7 @@
     <div class="grid-layout__column--3-4">
 
       <div class="back-arrow">
-        <a class="link-back" href="@routes.ResultsController.back">@Messages("back")</a>
+        <a class="link-back" href="@routes.FileUploadController.back">@Messages("back")</a>
       </div>
 
       <h1 id="header" class="heading-xlarge">@Messages("file.upload.page.header")</h1>
