--- a/app/views/member_name.scala.html
+++ b/app/views/member_name.scala.html
@@ -28,6 +28,11 @@
   <div class="grid-layout__column">
     <div class="grid-layout__column--3-4">
 
+
+      <div class="back-arrow">
+        <a class="link-back" href="@routes.MemberNameController.back">@Messages("back")</a>
+      </div>
+
         <h1 id="header" class="heading-xlarge">@Messages("member.name.page.header")</h1>
 
          <p id="sub-header">@Messages("member.name.page.sub-header")</p>
