--- a/public/stylesheets/ras.css
+++ b/public/stylesheets/ras.css
@@ -72,17 +72,21 @@
   font-weight: bold;
 }
 
-.r-padding {
-  padding-right: 20px;
-}
-
 .numeric {
   text-align: right;
-  padding-right: 0;
+  padding-right: 20px;
 }
 
 #choose-file {
   display: block;
   margin-bottom: 20px;
   border: 0px;
+}
+
+.content__body{
+  width: 100%;
+}
+
+#recent-lookups-table{
+ padding-right:20px;
 }
