--- a/public/stylesheets/ras.css
+++ b/public/stylesheets/ras.css
@@ -87,6 +87,14 @@
   width: 100%;
 }
 
+.grid-layout--no-gutter{
+  width:66.66%;
+}
+
 #recent-lookups-table{
  padding-right:20px;
+}
+
+#more-results-link{
+  float:right;
 }
