RAS-571: obtain envelope

--- a/app/views/file_upload_successful.scala.html
+++ b/app/views/file_upload_successful.scala.html
@@ -27,7 +27,7 @@
   <div class="grid-layout__column">
     <div class="grid-layout__column--3-4">
 
-      <h1 id="header" class="heading-xlarge">Successfully uploaded file</h1>
+      <h1 id="header" class="heading-xlarge">File uploaded successfully</h1>
 
     </div>
   </div>
