--- a/app/views/file_upload.scala.html
+++ b/app/views/file_upload.scala.html
@@ -39,7 +39,7 @@
         action=@fileUploadUrl
         enctype="multipart/form-data"
         method="post" >
-        <input id="someId" name="someName" type="file" size="40"/>
+        <input id="choose-file" name="file" type="file" size="40"/>
         <button type="submit" id="upload-button">Upload</button>
       </form>
 
