--- a/app/views/file_upload.scala.html
+++ b/app/views/file_upload.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@(fileUploadUrl: String)(implicit request: Request[_], context: config.RasContext, messages: Messages)
+@(fileUploadUrl: String, error: String)(implicit request: Request[_], context: config.RasContext, messages: Messages)
 
 @import uk.gov.hmrc.play.views.html._
 @import uk.gov.hmrc.play.views.html.helpers._
@@ -42,6 +42,10 @@
         <input id="choose-file" name="file" type="file" size="40"/>
         <button type="submit" id="upload-button">Upload</button>
       </form>
+
+
+        <p id="upload-error">@error</p>
+
 
     </div>
   </div>
