--- a/app/views/file_upload.scala.html
+++ b/app/views/file_upload.scala.html
@@ -36,6 +36,7 @@
       <p id="sub-header">@Html(Messages("file.upload.page.sub-header",Messages("templates.link")))</p>
 
       <form
+        id = "upload-form"
         action=@fileUploadUrl
         enctype="multipart/form-data"
         method="post" >
