RAS-565: update upload success content

--- a/app/views/file_upload_successful.scala.html
+++ b/app/views/file_upload_successful.scala.html
@@ -18,7 +18,7 @@
 
 @import uk.gov.hmrc.play.views.html._
 @import uk.gov.hmrc.play.views.html.helpers._
-@import views.html.helpers._
+
 
 @ras_main(title = Messages("file.upload.successful.page.title")) {
 
@@ -27,7 +27,8 @@
   <div class="grid-layout__column">
     <div class="grid-layout__column--3-4">
 
-      <h1 id="header" class="heading-xlarge">File uploaded successfully</h1>
+      <h1 id="page-header" class="heading-xlarge">@Messages("upload.success.header")</h1>
+      <p id="page-sub-header">@Messages("upload.success.sub-header")</p>
 
     </div>
   </div>
