RAS-565: Add continue button to upload successful

--- a/app/views/file_upload_successful.scala.html
+++ b/app/views/file_upload_successful.scala.html
@@ -27,8 +27,14 @@
   <div class="grid-layout__column">
     <div class="grid-layout__column--3-4">
 
-      <h1 id="page-header" class="heading-xlarge">@Messages("upload.success.header")</h1>
-      <p id="page-sub-header">@Messages("upload.success.sub-header")</p>
+      <div class="row">
+        <h1 id="page-header" class="heading-xlarge">@Messages("upload.success.header")</h1>
+        <p id="page-sub-header">@Messages("upload.success.sub-header")</p>
+      </div>
+
+      <div class="row">
+        <a id="continue" class="button" href="@routes.SessionController.redirect("dashboard",true)">@Messages("continue")</a>
+      </div>
 
     </div>
   </div>
